welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:5: error: type mismatch;
 found   : Unit
 required: Boolean
	if ( b > 10 || b  < 20){
        ^